--- a/public/cab.css
+++ b/public/cab.css
@@ -136,3 +136,25 @@ body{
     border-color: rgb(219, 51, 219);   
 
 }   
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-dialog {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  width: 80%;
+}
+
+.modal-header {
+  text-align :center ;
+}
