--- a/public/cab.css
+++ b/public/cab.css
@@ -1,160 +1,168 @@
-body{
-    background-color: rgb(53, 53, 53);
-  }
-  a{
-    text-decoration: none;
-    color:white;
-    font-size:16px;
-    
-  }
-  .header{
-    width: 100%;
-    height: 10vh;
-    background-color:rgb(42, 42, 42);
-  }
-  a:hover{
-    border-bottom:solid 2px rgb(219, 51, 219);
-    color: grey;
-  }
-  .header>ul{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    margin-left:1vw;
-  }
-  li{
-    padding: 1vw;
-    margin-top: 1vw;
-  }
-  /* login */
-  .log>ul{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    margin-left:1vw;
-    float: right;
-    margin-left: 55vw;
-  }
-  .selector{
-    margin-top: 2vw;
-    width: 100%;
-    height: 10vh;
-    background-color:rgb(42, 42, 42);
-    display: flex;
-    flex-direction:row ;
-  }
-  select{
-    background-color:rgb(42, 42, 42);
-    padding: 0.5vw;
-    margin-top: 1.5vw;
-    margin-left: 1vw;
-    width: 15vw;
-    color: rgb(207, 207, 207);
-  }
-  option:hover {
-   background-color: cornflowerblue;
-  }
-  .search{
-    background-color:rgb(42, 42, 42);
-    margin-top: 1.5vw;
-    margin-left: 1vw;
-    width: 15vw;
-  }
-  .search>form>input[type=text]{
-    width: 30vw;
-    height: 1.7vw;
-    background-color:rgb(42, 42, 42);
-    outline: none;
-    border: none;
-    border: 1px solid #e9e9e96e;
-  }
-  .cards{
-    background-color:rgb(42, 42, 42);
-    margin-top: 1.5vw;
-    height: 43.5vw;
-  }
-  .card{
-    padding: 1.2vw;
-    margin-left: 4vw;
-  }
-  .card>img{
-    margin-right: 2vw;
-    margin-bottom:1vw;
-  }
+/* body{
+  background-color: rgb(53, 53, 53);
+}
+a{
+  text-decoration: none;
+  color:white;
+  font-size:16px;
+  
+}
+.header{
+  width: 100%;
+  height: 10vh;
+  background-color:rgb(42, 42, 42);
+}
+a:hover{
+  border-bottom:solid 2px rgb(219, 51, 219);
+  color: grey;
+}
+.header>ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  margin-left:1vw;
+}
+li{
+  padding: 1vw;
+  margin-top: 1vw;
+}
+/* login */
+/* .log>ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  margin-left:1vw;
+  float: right;
+  margin-left: 55vw;
+}
+.selector{
+  margin-top: 2vw;
+  width: 100%;
+  height: 10vh;
+  background-color:rgb(42, 42, 42);
+  display: flex;
+  flex-direction:row ;
+}
+select{
+  background-color:rgb(42, 42, 42);
+  padding: 0.5vw;
+  margin-top: 1.5vw;
+  margin-left: 1vw;
+  width: 15vw;
+  color: rgb(207, 207, 207);
+}
+option:hover {
+ background-color: cornflowerblue;
+}
+.search{
+  background-color:rgb(42, 42, 42);
+  margin-top: 1.5vw;
+  margin-left: 1vw;
+  width: 15vw;
+}
+.search>form>input[type=text]{
+  width: 30vw;
+  height: 1.7vw;
+  background-color:rgb(42, 42, 42);
+  outline: none;
+  border: none;
+  border: 1px solid #e9e9e96e;
+}
+ form>input[type=checkbox]{
+  display: block;
+  color:white;
+} */
+/* #set_name{
+  color:white;
+}
+.cards{
+  background-color:rgb(42, 42, 42);
+  margin-top: 1.5vw;
+  height: 43.5vw;
+}
+.card{
+  padding: 1.2vw;
+  margin-left: 4vw;
+}
+.card>img{
+  margin-right: 2vw;
+  margin-bottom:1vw;
+}
 
-  table {  
+table {  
 
-    border-collapse: collapse;  
+  border-collapse: collapse;  
 
 }  
 
-    .inline{   
+  .inline{   
 
-        display: inline-block;    
+      display: inline-block;    
 
-        margin: 20px 0px;   
+      margin: 20px 0px;   
 
-    }            
+  }            
 
-    input, button{   
+  input, button{   
 
-        height: 34px;   
+      height: 34px;   
 
-    }    
+  }    
 
 .items {   
 
-    display: center;
-    margin-left:35% ;   
+  display: center;
+  margin-left:35% ;   
 
 }   
 
 .items a {   
 
-    font-weight:bold;   
+  font-weight:bold;   
 
-    font-size:18px;   
+  font-size:18px;   
 
-    color: rgb(207, 207, 207);;   
+  color: rgb(207, 207, 207);;   
 
-    float: center;   
+  float: center;   
 
-    padding: 8px 16px;   
+  padding: 8px 16px;   
 
-    text-decoration: none;   
+  text-decoration: none;   
 
-    border:1px solid rgb(207, 207, 207);;  
+  border:1px solid rgb(207, 207, 207);;  
 
-    margin: 2px; 
+  margin: 2px; 
 
 }   
-
-  
 
 .items a:hover:not(.active) {   
 
-    border-color: rgb(219, 51, 219);   
+  border-color: rgb(219, 51, 219);   
 
-}   
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
+}  
+/* Estilos del modal  */
+/* .modal {
+display: none;
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-dialog {
-  background-color: #fefefe;
-  margin: 10% auto;
-  padding: 20px;
-  width: 80%;
+background-color: #fefefe;
+margin: 10% auto;
+padding: 20px;
+width: 80%;
 }
 
 .modal-header {
-  text-align :center ;
-}
+text-align :center ;
+}  */
+
+/* desplegable */
